# Gnss_serial_driver_in_ROS

./: README.md
uart_rtk_driver/: CMakeLists.txt  package.xml
uart_rtk_driver/config/: config.yaml
uart_rtk_driver/include/global_defination/: global_defination.h.in
uart_rtk_driver/msg/: rtk.msg
uart_rtk_driver/src/rtk_driver/: rtk_read.cpp
